# git-accoutrements

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
src/: actions.rs  git.rs  lib.rs  utils.rs  version.rs
src/accoutrements/: __init__.py  colours.py  config.py  versions.py
src/accoutrements/cmd/: bugfix.py  chore.py  del.py  ditto.py  feature.py  master.py  rel.py  tidy.py
tests/: versions_test.py
